# explainable-agentic-rag

./: .env.example  .gitignore  README.md  basic_agent.py  faithfulness.py  llm_client.py  observability.py  pyproject.toml  search_papers.py  summarize_results.py
app/: config.py  main.py  progress.py  schemas.py
app/evaluation/: __init__.py  eval_dataset.jsonl  eval_dataset_readable.md  run_ragas_eval.py
app/graphs/: __init__.py  agentic_rag_graph.py  graph_hello_world.py  multi_agent_graph.py  rag_graph.py  state.py
app/rag/: __init__.py  agentic_rag.py  cli.py  compare.py  config.py  loaders.py  prompts.py  retriever.py  splitter.py  two_step_rag.py  vectorstore.py
app/tools/: attribution_tools.py  retrieval_tools.py  verification_tools.py
tests/: test_rag_cli.py  test_rag_compare.py  test_rag_retriever.py  test_schemas.py
