[project]
name = "explainable-agentic-rag"
version = "0.1.0"
description = "Explainable Agentic RAG with LangChain, LangGraph, LangSmith, and RAGAS-style evaluation."
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Neeraj Kumar Singh", email = "neeraj1909@gmail.com" }]

dependencies = [
    "langchain>=0.0.300",
    "langsmith>=0.2.0",
    "pydantic>=2.9",
    "requests>=2.31",
]
