[project]
name = "explainable-agentic-rag"
version = "0.1.0"
description = "Explainable Agentic RAG with LangChain, LangGraph, LangSmith, and RAGAS-style evaluation."
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Neeraj Kumar Singh", email = "neeraj1909@gmail.com" }]

dependencies = [
    "langchain>=0.0.300",
    "langchain-openai>=0.0.3",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "langsmith>=0.2.0",
    "pydantic>=2.9",
    "requests>=2.31",
    "pytest>=8.0.0",
    "arize-phoenix-otel>=0.16.1",
    "openinference-instrumentation-langchain>=0.1.66",
    "opentelemetry-sdk>=1.42.0",
    "opentelemetry-exporter-otlp>=1.42.0",
    "langchain-community>=0.4.1",
    "pypdf>=6.12.0",
    "langchain-huggingface>=1.2.2",
    "sentence-transformers>=5.5.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
